elco-salesforce/force-app/main/default/objects/Visit_Report__c/Visit_Report__c.object-meta.xml
<CustomObject>
  <label>Report Visita</label>
  <pluralLabel>Report Visite</pluralLabel>
  <nameField>
    <label>Report Visita Number</label>
    <type>AutoNumber</type>
    <displayFormat>VR-{000000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>