elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <label>Account</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipName>VisitReports</relationshipName>
  <relationshipLabel>Report Visite</relationshipLabel>
  <deleteConstraint>Restrict</deleteConstraint>
  <required>true</required>
</CustomField>