elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/FollowUp_Sent__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Inviato</label>
    <type>Checkbox</type>
</CustomField>