elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/FollowUp_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Sent_On__c</fullName>
    <label>Follow Up Inviato Il</label>
    <type>DateTime</type>
</CustomField>