elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Prossimi Passi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>