elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Oggetto</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>