elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/Summary__c.field-meta.xml
<CustomField>
  <fullName>Summary__c</fullName>
  <label>Riepilogo</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>