elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/Visit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Visit_DateTime__c</fullName>
    <label>Data Ora Visita</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>