elco-salesforce/force-app/main/default/objects/Visit_Report__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Tipo Visita</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Attività</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>